schema/testdata/validation_enum_default_no_expression/schema.keel
model Post {
    fields {
        type PostType @default
    }
}

enum PostType {
    Draft
    Published
}
